# active-inference

./: .gitignore  ARTIFACT-BASELINE.md  CLAUDE.md  Dockerfile  HANDOFF.md  INFO.md  README.md  RESUME-PROMPT.md  docker-compose.yml  pyproject.toml
active_inference/: __init__.py  agent.py  environments.py  free_energy.py  generative_model.py  inference.py  math_utils.py
analysis/: content-analysis-compuflair.md
decisions/: 001-adopt-concepts-not-software.md
dev-docs/: MVP.md
dev-docs/architecture/: OVERVIEW.md
dev-docs/decisions/: ADR-001-discrete-state-spaces.md  ADR-002-empirical-prior-for-vfe.md
dev-docs/experiments/: precision-oscillation.md
dev-docs/integration/: dependencies.md
dev-docs/progress/: STATUS.md
dev-docs/references/: SOURCES.md
examples/: grid_world_demo.py  tmaze_demo.py
research/: reuse-survey.md
sources/: CompuFlair-This_physics_idea_might_be_the_next_generation_of_machine_learning-2026-02-28.txt
tests/: test_agent.py  test_free_energy.py  test_generative_model.py  test_inference.py  test_math_utils.py
